--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,13 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  background-color: transparent;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
+  margin: 10px;
   border-top: 1px solid white;;
 }
 
@@ -69,3 +71,7 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+ .schedule {
+   display: grid;
+ }
